--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,13 @@
   "name": "deliveryapp",
   "version": "1.0.0",
   "description": "a full stack App",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "client": "cd ../client && npm start",
+    "admin": "cd ../admin && npm start",
+    "delivery": "cd ../delivery && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
