--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "deliveryapp",
+  "name": "desieats-server",
   "version": "1.0.0",
-  "description": "a full stack App",
+  "description": "DesiEats Food Delivery Backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "client": "cd ../client && npm start",
-    "admin": "cd ../admin && npm start",
-    "delivery": "cd ../delivery && npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "MERN",
-    "Stack"
-  ],
-  "author": "Niharika",
-  "license": "ISC",
   "dependencies": {
-    "mongodb": "^6.19.0"
+    "express": "4.18.2",
+    "mongoose": "7.5.0",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "bcryptjs": "2.4.3",
+    "jsonwebtoken": "9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "3.0.1"
   }
 }
